Add dnf package manager
	Fixes ICSHWI-2192

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -45,7 +45,8 @@ IMAGE_INSTALL_append = " sudo polkit eth-config nfs-utils readline \
                          perl-module-posix kernel-module-tsc tscmon \
                          coreutils sysfsutils sysklogd libhugetlbfs \
                          kmod kernel-modules sysstat pciutils screen \
-                         procserv libtirpc dhcp-client cct-dhcp-conf"
+                         procserv libtirpc dhcp-client cct-dhcp-conf \
+                         dnf"
 
 LINUX_VERSION_EXTENSION = "-cct"
 
