--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,7 +174,7 @@ release_images_tags:
   image: registry.esss.lu.se/ics-docker/jfrog:latest
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/
 
 release_images_web:
@@ -188,7 +188,7 @@ release_images_web:
   image: registry.esss.lu.se/ics-docker/jfrog:latest
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/
 
 release_images_rt_tags:
@@ -232,7 +232,7 @@ release_toolchain_web:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/sdk
     - jfrog rt upload --flat=false "*" yocto/toolchain/
-    - echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
 
 release_images_cct_tags:
@@ -246,7 +246,7 @@ release_images_cct_tags:
   image: registry.esss.lu.se/ics-docker/jfrog:latest
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/
 
 release_images_cct_web:
@@ -260,7 +260,7 @@ release_images_cct_web:
   image: registry.esss.lu.se/ics-docker/jfrog:latest
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/
 
 release_images_rt_cct_tags:
@@ -274,7 +274,7 @@ release_images_rt_cct_tags:
   image: registry.esss.lu.se/ics-docker/jfrog:latest
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
 
 release_images_rt_cct_web:
@@ -288,7 +288,7 @@ release_images_rt_cct_web:
   image: registry.esss.lu.se/ics-docker/jfrog:latest
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64 && echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/rt/
 
 release_toolchain_cct_web:
@@ -304,7 +304,7 @@ release_toolchain_cct_web:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_cct-64/tmp/deploy/sdk
     - jfrog rt upload --flat=false "*" yocto/toolchain/
-    - echo $CI_COMMIT_SHA > $CI_COMMIT_SHA
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
 
 #release_rpm_tags:
