Add jpeg for ADSupport module
	Fixes ICSHWI-2224

--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -29,7 +29,7 @@ IMAGE_INSTALL_append = " i2c-tools eth-config fmc nfs-utils readline \
                          coreutils sysfsutils sysklogd libhugetlbfs \
                          kmod kernel-modules sysstat pciutils screen \
                          ifc14xx-conf procserv libtirpc sudo dnf \
-                         host-setup"
+                         host-setup jpeg"
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
 
