--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -235,9 +235,24 @@ release_toolchain_web:
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/sdk
-    - jfrog rt upload --flat=false "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
+
+release_toolchain_tags:
+  variables:
+    GIT_STRATEGY: none
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_ifc14xx-64b/tmp/deploy/sdk
+    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
 release_images_cct_tags:
   variables:
@@ -307,9 +322,24 @@ release_toolchain_cct_web:
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_cct-64/tmp/deploy/sdk
-    - jfrog rt upload --flat=false "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
+
+release_toolchain_cct_tags:
+  variables:
+    GIT_STRATEGY: none
+  only:
+    - tags
+  tags:
+    - yocto
+  stage: release
+  image: registry.esss.lu.se/ics-docker/jfrog:latest
+  script:
+    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd build_cct-64/tmp/deploy/sdk
+    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
 #release_rpm_tags:
 #  variables:
