Cleanup ifc14xx machines and images
	Improves usability and maintenance

--- a/sources/meta-ess/conf/machine/ifc14xx-rt-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-rt-64b.conf
@@ -1,43 +1,5 @@
-#@TYPE: Machine
-#@NAME: NXP T2080RDB
-#@SOC: t2080
-#@DESCRIPTION: Machine configuration for NXP QorIQ T2080 Reference
-#              Design Board with ppce6500 core in 32b mode
-#@MAINTAINER: Chunrong Guo <chunrong.guo@nxp.com>
+require conf/machine/ifc14xx-64b.conf
 
-require conf/machine/include/e6500-64b.inc
-
-SOC_FAMILY = "t2:t2080"
-
-UBOOT_CONFIG ??= "nor"
-UBOOT_CONFIG[nor] = "IFC14XX_defconfig"
-
-HV_CFG_M = "t2080rdb"
-
-KERNEL_DEVICETREE ?= "fsl/ifc14xx-sdk.dtb"
-KERNEL_DEFCONFIG ?= "ifc14xx_rt_defconfig"
-
+KERNEL_DEFCONFIG = "ifc14xx_rt_defconfig"
 PREFERRED_PROVIDER_virtual/kernel = "linux-qoriq-rt"
-
-JFFS2_ERASEBLOCK = "0x10000"
-
-EXTRA_IMAGEDEPENDS += "fm-ucode rcw"
-
-USE_VT ?= "0"
-
-IMAGE_INSTALL_append = " i2c-tools eth-config fmc nfs-utils readline \
-                         boost curl libxml2 zlib libpng nano tree perl \
-                         perl-module-posix kernel-module-tsc tscmon \
-                         coreutils sysfsutils sysklogd libhugetlbfs \
-                         kmod kernel-modules sysstat pciutils screen \
-                         ifc14xx-conf procserv libtirpc sudo dnf \
-                         host-setup jpeg"
-IMAGE_INSTALL_remove = " udev-rules-qoriq"
-BBMASK = " lxc"
-
-SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1"
-
-# Initramfs Options
-INITRAMFS_IMAGE = "ifc14xx-image-initramfs"
-INITRAMFS_IMAGE_BUNDLE = "1"
 
