--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -36,6 +36,7 @@ BBMASK = " lxc"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1"
 
 # Initramfs Options
-INITRAMFS_IMAGE = "ifc14xx-image-initramfs"
+INITRAMFS_IMAGE = "ifc14xx-image"
 INITRAMFS_IMAGE_BUNDLE = "1"
+INITRAMFS_MAXSIZE = "524288"
 
