--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -46,7 +46,8 @@ IMAGE_INSTALL_append = " sudo polkit eth-config nfs-utils readline \
                          coreutils sysfsutils sysklogd libhugetlbfs \
                          kmod kernel-modules sysstat pciutils screen \
                          procserv libtirpc dhcp-client cct-dhcp-conf \
-                         dnf host-setup jpeg bzip2 cct-conf mrfioc2"
+                         dnf host-setup jpeg bzip2 cct-conf mrfioc2 \
+                         hdf5"
 
 LINUX_VERSION_EXTENSION = "-cct"
 
