--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ build_image_rt:
       - build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
       - sstate-cache/
       - downloads/
-      - build_ifc14xx-rt-64b/tmp/deploy/rpm
+      - build_ifc14xx-rt-64b/tmp/deploy/rpm/ifc14xx_rt_64b
     expire_in: 24 hour
 
 build_toolchain:
@@ -126,7 +126,7 @@ build_image_rt_cct:
       - build_cct-rt-64/tmp/deploy/images/cct-rt-64
       - sstate-cache/
       - downloads/
-      - build_cct-rt-64/tmp/deploy/rpm
+      - build_cct-rt-64/tmp/deploy/rpm/cct_rt_64
     expire_in: 24 hour
 
 build_toolchain_cct:
@@ -190,6 +190,9 @@ release_images_tags:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/
+    - cd ../../../../../
+    - cd build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
+    - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/rt/
 
 release_images_web:
   variables:
@@ -204,32 +207,7 @@ release_images_web:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/images/ifc14xx-64b && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/
-
-release_images_rt_tags:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
-    - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/rt/
-
-release_images_rt_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - web
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd ../../../../../
     - cd build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/rt/
 
@@ -277,6 +255,9 @@ release_images_cct_tags:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/
+    - cd ../../../../../
+    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
 
 release_images_cct_web:
   variables:
@@ -291,32 +272,7 @@ release_images_cct_web:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/
-
-release_images_rt_cct_tags:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
-    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
-
-release_images_rt_cct_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - web
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd ../../../../../
     - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/rt/
 
@@ -351,32 +307,11 @@ release_toolchain_cct_tags:
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
-release_rpm_tags:
+release_rpm:
   variables:
     GIT_STRATEGY: none
   only:
     - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_ifc14xx-64b/tmp/deploy/rpm
-    - jfrog rt upload --flat=false "tsc-*.rpm" rpm-ics/ioxos/ --exclude-patterns="tsc-dev*;tsc-dbg*"
-    - jfrog rt upload --flat=false "tscmon-*.rpm" rpm-ics/ioxos/ --exclude-patterns="tscmon-dev*;tscmon-dbg*"
-    - jfrog rt upload --flat=false "hdf5-*.rpm" rpm-ics/ioxos/ --exclude-patterns="hdf5-dev*;hdf5-dbg*"
-    - jfrog rt upload --flat=false "tar-*.rpm" rpm-ics/ioxos/ --exclude-patterns="tar-dev*;tar-dbg*"
-    - jfrog rt upload --flat=false "bzip2-*.rpm" rpm-ics/ioxos/ --exclude-patterns="bzip2-dev*;bzip2-dbg*"
-    - jfrog rt upload --flat=false "python-*.rpm" rpm-ics/ioxos/ --exclude-patterns="*-dev-*;*-dbg-*"
-    - jfrog rt upload --flat=false "python3-*.rpm" rpm-ics/ioxos/ --exclude-patterns="*-dev-*;*-dbg-*"
-    - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
-    - jfrog rt upload --flat=false "tsc-*.rpm" rpm-ics/ioxos/ --exclude-patterns="tsc-dev*;tsc-dbg*"
-
-release_rpm_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
     - web
   tags:
     - yocto
@@ -395,32 +330,11 @@ release_rpm_web:
     - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
     - jfrog rt upload --flat=false "tsc-*.rpm" rpm-ics/ioxos/ --exclude-patterns="tsc-dev*;tsc-dbg*"
 
-release_rpm_cct_tags:
+release_rpm_cct:
   variables:
     GIT_STRATEGY: none
   only:
     - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-64/tmp/deploy/rpm
-    - jfrog rt upload --flat=false "tsc-*.rpm" rpm-ics/cct/ --exclude-patterns="tsc-dev*;tsc-dbg*"
-    - jfrog rt upload --flat=false "tscmon-*.rpm" rpm-ics/cct/ --exclude-patterns="tscmon-dev*;tscmon-dbg*"
-    - jfrog rt upload --flat=false "hdf5-*.rpm" rpm-ics/cct/ --exclude-patterns="hdf5-dev*;hdf5-dbg*"
-    - jfrog rt upload --flat=false "tar-*.rpm" rpm-ics/cct/ --exclude-patterns="tar-dev*;tar-dbg*"
-    - jfrog rt upload --flat=false "bzip2-*.rpm" rpm-ics/cct/ --exclude-patterns="bzip2-dev*;bzip2-dbg*"
-    - jfrog rt upload --flat=false "python-*.rpm" rpm-ics/cct/ --exclude-patterns="*-dev-*;*-dbg-*"
-    - jfrog rt upload --flat=false "python3-*.rpm" rpm-ics/cct/ --exclude-patterns="*-dev-*;*-dbg-*"
-    - cd ../../../../build_cct-rt-64/tmp/deploy/rpm/tmp/deploy/rpm
-    - jfrog rt upload --flat=false "tsc-*.rpm" rpm-ics/cct/ --exclude-patterns="tsc-dev*;tsc-dbg*"
-
-release_rpm_cct_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
     - web
   tags:
     - yocto
