--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,7 +150,7 @@ build_toolchain_cct:
       - downloads/
     expire_in: 24 hour
 
-release_sstate:
+release_sstate_download:
   variables:
     GIT_STRATEGY: none
   tags:
@@ -160,17 +160,7 @@ release_sstate:
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd sstate-cache && jfrog rt upload --flat=false "*" yocto/sstate/
-
-release_downloads:
-  variables:
-    GIT_STRATEGY: none
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd downloads && find . -type f -name '*.done' -exec rm {} + && if [ -d git2 ]; then rm -r git2/; fi
+    - cd ../downloads && find . -type f -name '*.done' -exec rm {} + && if [ -d git2 ]; then rm -r git2/; fi
     - jfrog rt upload --flat=false "*.tar.bz2" yocto/downloads/
     - jfrog rt upload --flat=false "*.tar.gz" yocto/downloads/
     - jfrog rt upload --flat=false "*.tar.xz" yocto/downloads/
@@ -193,6 +183,22 @@ release_images_tags:
     - cd ../../../../../
     - cd build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_COMMIT_TAG/rt/
+    - cd ../../../../../
+    - cd build_ifc14xx-64b/tmp/deploy/sdk
+    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
+    - cd ../../../../
+    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/
+    - cd ../../../../../
+    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
+    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
+    - cd ../../../../../
+    - cd build_cct-64/tmp/deploy/sdk
+    - jfrog rt upload --flat=false "*" yocto/toolchain/
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
 release_images_web:
   variables:
@@ -210,102 +216,20 @@ release_images_web:
     - cd ../../../../../
     - cd build_ifc14xx-rt-64b/tmp/deploy/images/ifc14xx-rt-64b
     - jfrog rt upload --flat=false "*" boot-images/ioxos/$CI_PIPELINE_ID/rt/
-
-release_toolchain_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - web
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd ../../../../../
     - cd build_ifc14xx-64b/tmp/deploy/sdk
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
-
-release_toolchain_tags:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_ifc14xx-64b/tmp/deploy/sdk
-    - jfrog rt upload --flat=false "*" yocto/toolchain/
-    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
-    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
-
-release_images_cct_tags:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
-    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/
-    - cd ../../../../../
-    - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
-    - jfrog rt upload --flat=false "*" boot-images/cct/$CI_COMMIT_TAG/rt/
-
-release_images_cct_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - web
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd ../../../../
     - cd build_cct-64/tmp/deploy/images/cct-64 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/
     - cd ../../../../../
     - cd build_cct-rt-64/tmp/deploy/images/cct-rt-64
     - jfrog rt upload --flat=false "*" boot-images/cct/$CI_PIPELINE_ID/rt/
-
-release_toolchain_cct_web:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - web
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
+    - cd ../../../../../
     - cd build_cct-64/tmp/deploy/sdk
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
-
-release_toolchain_cct_tags:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - tags
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-64/tmp/deploy/sdk
-    - jfrog rt upload --flat=false "*" yocto/toolchain/
-    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
-    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
 release_rpm:
   variables:
@@ -329,20 +253,7 @@ release_rpm:
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "python3-*.rpm" rpm-ics/ioxos/
     - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="tsc-dev*;tsc-dbg*" "tsc-*.rpm" rpm-ics/ioxos/
-
-release_rpm_cct:
-  variables:
-    GIT_STRATEGY: none
-  only:
-    - tags
-    - web
-  tags:
-    - yocto
-  stage: release
-  image: registry.esss.lu.se/ics-docker/jfrog:latest
-  script:
-    - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
-    - cd build_cct-64/tmp/deploy/rpm
+    - cd ../../../../build_cct-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="tsc-dev*;tsc-dbg*" "tsc-*.rpm" rpm-ics/cct/
     - jfrog rt upload --flat=false --exclude-patterns="tscmon-dev*;tscmon-dbg*" "tscmon-*.rpm" rpm-ics/cct/
     - jfrog rt upload --flat=false --exclude-patterns="hdf5-dev*;hdf5-dbg*" "hdf5-*.rpm" rpm-ics/cct/
@@ -350,6 +261,6 @@ release_rpm_cct:
     - jfrog rt upload --flat=false --exclude-patterns="bzip2-dev*;bzip2-dbg*" "bzip2-*.rpm" rpm-ics/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "python-*.rpm" rpm-ics/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "python3-*.rpm" rpm-ics/cct/
-    - cd ../../../../build_cct-rt-64/tmp/deploy/rpm/tmp/deploy/rpm
+    - cd ../../../../build_cct-rt-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="tsc-dev*;tsc-dbg*" "tsc-*.rpm" rpm-ics/cct/
 
