Upload rpm first wildcard should only affect subfolders

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -244,23 +244,23 @@ release_rpm:
   script:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/rpm
-    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*kernel-module-tsc-*.rpm" rpm-ics/ioxos/
-    - jfrog rt upload --flat=false --exclude-patterns="*tscmon-dev*;*tscmon-dbg*" "*tscmon-*.rpm" rpm-ics/ioxos/
-    - jfrog rt upload --flat=false --exclude-patterns="*hdf5-dev*;*hdf5-dbg*" "*hdf5-*.rpm" rpm-ics/ioxos/
-    - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*tar-*.rpm" rpm-ics/ioxos/
-    - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*bzip2-*.rpm" rpm-ics/ioxos/
-    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*python-*.rpm" rpm-ics/ioxos/
-    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*python3-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*tscmon-dev*;*tscmon-dbg*" "*/tscmon-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*hdf5-dev*;*hdf5-dbg*" "*/hdf5-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*/tar-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*/bzip2-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python3-*.rpm" rpm-ics/ioxos/
     - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
-    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*kernel-module-tsc-*.rpm" rpm-ics/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/ioxos/
     - cd ../../../../build_cct-64/tmp/deploy/rpm
-    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*kernel-module-tsc-*.rpm" rpm-ics/cct/
-    - jfrog rt upload --flat=false --exclude-patterns="*tscmon-dev*;*tscmon-dbg*" "*tscmon-*.rpm" rpm-ics/cct/
-    - jfrog rt upload --flat=false --exclude-patterns="*hdf5-dev*;*hdf5-dbg*" "*hdf5-*.rpm" rpm-ics/cct/
-    - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*tar-*.rpm" rpm-ics/cct/
-    - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*bzip2-*.rpm" rpm-ics/cct/
-    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*python-*.rpm" rpm-ics/cct/
-    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*python3-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*tscmon-dev*;*tscmon-dbg*" "*/tscmon-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*hdf5-dev*;*hdf5-dbg*" "*/hdf5-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*/tar-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*/bzip2-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python3-*.rpm" rpm-ics/cct/
     - cd ../../../../build_cct-rt-64/tmp/deploy/rpm
-    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*kernel-module-tsc-*.rpm" rpm-ics/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/cct/
 
