--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,10 @@ build_image:
   script:
     - . ./setup-env -m ifc14xx-64b -j 8 -t 8
     - bitbake ifc14xx-image
+    - bitbake mrfioc2
     - bitbake tar
+    - bitbake zip
+    - bitbake unzip
     - bitbake bzip2
     - bitbake hdf5
     - bitbake python-numpy
@@ -93,6 +96,8 @@ build_image_cct:
     - . ./setup-env -m cct-64 -j 8 -t 8
     - bitbake cct-image
     - bitbake tar
+    - bitbake zip
+    - bitbake unzip
     - bitbake bzip2
     - bitbake hdf5
     - bitbake python-numpy
@@ -245,22 +250,32 @@ release_rpm:
     - jfrog rt config artifactory --url=${ARTIFACTORY_URL} --apikey=${ARTIFACTORY_API_KEY}
     - cd build_ifc14xx-64b/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/ioxos/
     - jfrog rt upload --flat=false --exclude-patterns="*tscmon-dev*;*tscmon-dbg*" "*/tscmon-*.rpm" rpm-ics/yocto/ioxos/
     - jfrog rt upload --flat=false --exclude-patterns="*hdf5-dev*;*hdf5-dbg*" "*/hdf5-*.rpm" rpm-ics/yocto/ioxos/
     - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*/tar-*.rpm" rpm-ics/yocto/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*zip-dev*;*zip-dbg*" "*/zip-*.rpm" rpm-ics/yocto/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*unzip-dev*;*unzip-dbg*" "*/unzip-*.rpm" rpm-ics/yocto/ioxos/
     - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*/bzip2-*.rpm" rpm-ics/yocto/ioxos/
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python-*.rpm" rpm-ics/yocto/ioxos/
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python3-*.rpm" rpm-ics/yocto/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/perl-*.rpm" rpm-ics/yocto/ioxos/
     - cd ../../../../build_ifc14xx-rt-64b/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/ioxos/
+    - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/ioxos/
     - cd ../../../../build_cct-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*tscmon-dev*;*tscmon-dbg*" "*/tscmon-*.rpm" rpm-ics/yocto/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*hdf5-dev*;*hdf5-dbg*" "*/hdf5-*.rpm" rpm-ics/yocto/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*/tar-*.rpm" rpm-ics/yocto/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*zip-dev*;*zip-dbg*" "*/zip-*.rpm" rpm-ics/yocto/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*unzip-dev*;*unzip-dbg*" "*/unzip-*.rpm" rpm-ics/yocto/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*/bzip2-*.rpm" rpm-ics/yocto/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python-*.rpm" rpm-ics/yocto/cct/
     - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python3-*.rpm" rpm-ics/yocto/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/perl-*.rpm" rpm-ics/yocto/cct/
     - cd ../../../../build_cct-rt-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/cct/
+    - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/cct/
 
