Only run 'release_sstate_download' stage of pipeline for parent repository (not forks)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,6 +159,8 @@ build_toolchain_cct:
 release_sstate_download:
   variables:
     GIT_STRATEGY: none
+  only:
+    - branches@gitlab.esss.lu.se/icshwi/yocto-ess
   tags:
     - yocto
   stage: release
