--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -34,7 +34,7 @@ XSERVER ?= "${XSERVER_X86_BASE} \
 
 SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1 115200;ttyS2"
-APPEND += "console=ttyS0,115200 console=tty0 pci=realloc pciehp.pciehp_force=1 pcie_ports=native"
+APPEND += "ip=:172.30.4.170:::::off console=ttyS0,115200 console=tty0 pci=realloc pciehp.pciehp_force=1 pcie_ports=native"
 
 IMAGE_FSTYPES += "wic"
 WKS_FILE ?= "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", "systemd-bootdisk-microcode.wks", "grub-bootdisk-microcode.wks", d)}"
