Add tiff, netcdf-c and c-blosc to toolchains

--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -57,6 +57,7 @@ IMAGE_INSTALL_append = " i2c-tools \
                          jpeg \
                          i2c-udev-rules \
                          python3-pkgutil \
+                         tiff \
                          "
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
