Add sis8300drv module to CCT build

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -75,6 +75,7 @@ IMAGE_INSTALL_append = " sudo \
                          cct-conf \
                          mrfioc2 \
                          python3-pkgutil \
+                         sis8300 \
                          "
 
 LINUX_VERSION_EXTENSION = "-cct"
